[package]
name = "crate-name"
description = "A simple macro to get the name of the current crate."
version = "0.1.0"
edition = "2018"
authors = ["soeur <juzi201314@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
